fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -272,7 +272,6 @@ section {
   opacity: 0.9;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
 }
 
 #home {
@@ -285,7 +284,7 @@ section {
   opacity: 0.9;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+
   min-height: 100vh;
 }
 
@@ -502,7 +501,6 @@ p {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
   }
   .filiment {
     display: none;
